--- a/arch/arm/dts/lec-imx8mp.dts
+++ b/arch/arm/dts/lec-imx8mp.dts
@@ -17,13 +17,13 @@
 		stdout-path = &uart2;
 	};
 
-#if defined(DDR_2GB) || defined(DDR_2GK)
+#if defined(CONFIG_LPDDR4_2GB) || defined(CONFIG_LPDDR4_2GK)
 	memory@40000000 {
 		device_type = "memory";
 		reg = <0x0 0x40000000 0 0x80000000>,
 		      <0x1 0x00000000 0 0x00000000>;
 	};
-#elif defined(DDR_4GB)
+#elif defined(CONFIG_LPDDR4_4GB)
 	memory@40000000 {
 		device_type = "memory";
 		reg = <0x0 0x40000000 0 0xC0000000>,
