--- a/board/adlink/lec-imx8mp/Kconfig
+++ b/board/adlink/lec-imx8mp/Kconfig
@@ -9,6 +9,25 @@ config SYS_VENDOR
 config SYS_CONFIG_NAME
 	default "lec-imx8mp"
 
+config CONFIG_IMX_DDRSIZE
+	bool "Define lec-imx8mp DDR Size"
+	depends on TARGET_LEC_IMX8MP
+
+choice
+	prompt "Select a lec-imx8mp DDR Size"
+	depends on CONFIG_IMX_DDRSIZE
+
+	config LPDDR4_2GB
+		bool "LPDDR4_2GB"
+
+        config LPDDR4_2GK
+		bool "LPDDR4_2GK"
+
+	config LPDDR4_4GB
+		bool "LPDDR4_4GB"
+
+endchoice
+
 source "board/adlink/common/Kconfig"
 
 endif
