--- a/arch/arm/dts/lec-imx8mp.dts
+++ b/arch/arm/dts/lec-imx8mp.dts
@@ -6,6 +6,7 @@
 /dts-v1/;
 
 #include <dt-bindings/usb/pd.h>
+#include <dt-bindings/net/ti-dp83867.h>
 #include "imx8mp.dtsi"
 
 / {
@@ -94,7 +95,7 @@
 		#address-cells = <1>;
 		#size-cells = <0>;
 
-		ethphy0: ethernet-phy@1 {
+		ethphy0: ethernet-phy@0 {
 			compatible = "ethernet-phy-ieee802.3-c22";
 			reg = <1>;
 			eee-broken-1000t;
@@ -106,18 +107,23 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_fec>;
 	phy-mode = "rgmii-id";
-	phy-handle = <&ethphy1>;
+	phy-handle = <&dp83867_0>;
 	fsl,magic-packet;
 	status = "okay";
+	ti,rx-internal-delay = <DP83867_RGMIIDCTL_1_75_NS>;
+	ti,tx-internal-delay = <DP83867_RGMIIDCTL_1_75_NS>;
+	ti,fifo-depth = <DP83867_PHYCR_FIFO_DEPTH_4_B_NIB>;
+	ti,min-output-impedance;
+	ti,dp83867-rxctrl-strap-quirk;
 
 	mdio {
 		#address-cells = <1>;
 		#size-cells = <0>;
 
-		ethphy1: ethernet-phy@1 {
+		dp83867_0: ethernet-phy@1 {
 			compatible = "ethernet-phy-ieee802.3-c22";
 			reg = <1>;
-			eee-broken-1000t;
+			interrupts = <3 IRQ_TYPE_EDGE_FALLING>;
 		};
 	};
 };
