--- a/configs/adlink_lec8mp_defconfig
+++ b/configs/adlink_lec8mp_defconfig
@@ -69,6 +69,7 @@ CONFIG_ENV_IS_IN_MMC=y
 CONFIG_ENV_IS_IN_SPI_FLASH=y
 CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_ENV_VARS_UBOOT_RUNTIME_CONFIG=y
+CONFIG_NET_RANDOM_ETHADDR=y
 CONFIG_REGMAP=y
 CONFIG_SYSCON=y
 CONFIG_CLK_COMPOSITE_CCF=y
@@ -104,10 +105,10 @@ CONFIG_SPI_FLASH_BAR=y
 CONFIG_SPI_FLASH_STMICRO=y
 CONFIG_SF_DEFAULT_BUS=0
 CONFIG_SF_DEFAULT_CS=0
-CONFIG_PHY_REALTEK=y
+CONFIG_PHY_TI=y
 CONFIG_DM_ETH=y
+CONFIG_DM_ETH_PHY=y
 CONFIG_PHY_GIGE=y
-# CONFIG_DM_ETH_PHY=y
 CONFIG_DWC_ETH_QOS=y
 CONFIG_FEC_MXC=y
 CONFIG_MII=y
