--- a/arch/arm/mach-imx/imx8m/Kconfig
+++ b/arch/arm/mach-imx/imx8m/Kconfig
@@ -177,6 +177,12 @@ config TARGET_LEC_IMX8MP
 	select IMX8M_LPDDR4
 	select CONFIG_IMX_DDRSIZE
 
+config TARGET_LEC_IMX8MM
+        bool "Adlink lec-imx8mm LPDDR4 board"
+        select IMX8MM
+        select SUPPORT_SPL
+        select IMX8M_LPDDR4
+
 config TARGET_IMX8MP_DDR4_EVK
 	bool "imx8mp DDR4 EVK board"
 	select IMX8MP
@@ -284,5 +290,6 @@ source "board/beacon/imx8mn/Kconfig"
 source "board/phytec/phycore_imx8mm/Kconfig"
 source "board/phytec/phycore_imx8mp/Kconfig"
 source "board/adlink/lec-imx8mp/Kconfig"
+source "board/adlink/lec-imx8mm/Kconfig"
 
 endif
