--- a/arch/arm/dts/lec8mm.dtsi
+++ b/arch/arm/dts/lec8mm.dtsi
@@ -295,6 +295,40 @@
 		};
 	}; */
 	
+	/* DSI-LVDS Bridge sn65dsi84
+	dsi_lvds_bridge: sn65dsi84@2d {
+		reg = <0x2d>;
+		status = "okay";
+		compatible = "ti,sn65dsi84";
+		#gpio-cells = <2>;
+		enable-gpios = <&gpio3 1 GPIO_ACTIVE_HIGH>;
+		sn65dsi84,addresses = <
+			0x09 0x0A 0x0B 0x0D
+			0x10 0x11 0x12 0x13
+			0x18 0x19 0x1A 0x1B
+			0x20 0x21 0x22 0x23
+			0x24 0x25 0x26 0x27
+			0x28 0x29 0x2A 0x2B
+			0x2C 0x2D 0x2E 0x2F
+			0x30 0x31 0x32 0x33
+			0x34 0x35 0x36 0x37
+			0x38 0x39 0x3A 0x3B
+			0x3C 0x3D 0x3E 0x0D
+		>;
+		sn65dsi84,values = <
+			0x00 0x05 0x1b 0x00
+			0x26 0x00 0x35 0x00
+			0x6c 0x00 0x03 0x00
+			0x80 0x07 0x00 0x00
+			0x00 0x00 0x00 0x00
+			0xf8 0x01 0x00 0x00
+			0x0a 0x00 0x00 0x00
+			0x0e 0x00 0x00 0x00
+			0x28 0x00 0x00 0x00
+			0x00 0x00 0x00 0x00
+			0x00 0x00 0x00 0x01
+		>;
+	}; */
 };
 
 /* I2C_CAM1: CAM1(1v8), TPM(1.8), RTC(3v3), HDMI(3.3) PCIe Clock Gen */
