--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -884,7 +884,7 @@ dtb-$(CONFIG_ARCH_IMX8M) += \
 	imx8mn-ddr3l-ab2.dtb \
 	imx8mn-ab2.dtb \
 	uboot-lec8mp.dtb \
-	lec8mm-lpddr4-2g.dtb
+	uboot-lec8mm-lpddr4-2g.dtb
 
 dtb-$(CONFIG_ARCH_IMXRT) += imxrt1050-evk.dtb \
 	imxrt1020-evk.dtb
